# create-flask-react-app

./: .gitignore  CHANGELOG.md  README.md  config.yml  demo.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
scripts/: postbuild.js
template/: .env  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  alembic.ini  docker-compose.development.yml  docker-compose.yml  nginx.conf
template/.github/workflows/: deploy.yml
template/client/: .eslintrc  vite.config.ts
template/client/src/: App.tsx
template/server/: __init__.py  alembic.ini  app.py  config.py  models.py  pyproject.toml  routes.py
template/server/migrations/: env.py
